<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shg_1</string>
     <string name="login">Log In</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="members">Members</string>
    <string name="transaction">Transactions</string>
    <string name="schedule">Schedule</string>
    <string name="add_member">Add Member</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile Number</string>
    <string name="photo">Attach Photo</string>
    <string name="member_done">Add</string>
     <string name="individual">Individual</string>
      <string name="group">Group</string>
      <string name="hello">Member List</string>
      <string name="from">From</string>
      <string name="to">To</string>
      <string name="money">Money</string>
      <string name="why">Why</string>
      <string name="enter_name">Enter Name</string>
      <string name="add">Add</string>
       <string name="line">Group Has Taken Loan</string>
       <string name="see">See Transactions</string>
    
</resources>
